tests/wpt/tests/third_party/test262/test/language/statements/for-in/var-arguments-fn-strict-init.js
// Copyright (c) 2018 Mike Pennisi.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: sec-for-statement
description: >
    'for(var arguments = 42 in ...) {...}' throws SyntaxError in
    strict mode within a function declaration
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

function f() {
  for (var arguments = 42 in null) {}
}
